--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <div class="widget">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Speaker_Icon.svg" alt="TASK Radio Logo" class="logo" />
+    <img src="https://images.squarespace-cdn.com/content/v1/5822f5c9893fc00a1ffb3f27/86e8cf44-3460-4031-b5d6-e3786c01838c/TASK+HOUSE+LOGO+-+MASTER.png?format=1500w" alt="TASK Radio Logo" class="logo" />
     <div class="content">
       <div class="title">TASK Radio</div>
       <audio class="audio" controls autoplay>
