--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="player">
-    <img src="play.png" alt="Play Button" class="play-pause-btn" id="playPauseBtn" />
+    <img src="controls-play.png" alt="Play Button" class="play-pause-btn" id="playPauseBtn" />
     <div class="info">
       <div class="title">TASK Radio</div>
       <div class="status" id="statusText">Paused</div>
