--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       isPlaying = true;
     } else {
       radioAudio.pause();
-      playPauseBtn.textContent = '▶️'; // Play symbol
+      playPauseBtn.textContent = '▶'; // Play symbol
       playPauseBtn.setAttribute('aria-label', 'Play');
       isPlaying = false;
     }
