--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     position: relative;
     width: 600px;
     height: 258px;
-    background: url('./background.png') no-repeat center center;
+    background: url('./BG02.png') no-repeat center center;
     background-size: cover;
     border-radius: 15px;
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
@@ -27,7 +27,7 @@
     position: absolute;
     top: 177px;    /* 5px up from 182px */
     left: 249px;   /* 5px right from 244px */
-    width: 110px;  /* smaller width so it fits nicely */
+    width: 200px;  /* smaller width so it fits nicely */
     height: 32px;  /* typical audio control height */
     background: transparent;
     border-radius: 5px;
