--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     position: relative;
     width: 600px;
     height: 258px;
-    background: url('./background.png') no-repeat center center;
+    background: url('./background1.png') no-repeat center center;
     background-size: cover;
     border-radius: 15px;
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
